# This is a combination of 4 commits. # This is the 1st commit message:
Add unencrypted secret as secret env.

# The commit message #2 will be skipped:

# Add 1 git-crypt collaborator
#
# New collaborators:
#
#	FE965E2F Kube ArgoCD (GPG key for ArgoCD. Used to encrypt secrets for GitOps.) <info@busykoala.ch>

# The commit message #3 will be skipped:

# Add 1 git-crypt collaborator
#
# New collaborators:
#
#	41732777 Matthias Osswald <m@osswald.li>

# The commit message #4 will be skipped:

# Update readme with git-crypt and add gitattrs.

--- a/templates/dummy.deployment.yaml
+++ b/templates/dummy.deployment.yaml
@@ -18,6 +18,12 @@ spec:
       - name: {{ template "dummy-server-chart.fullname" . }}-depl
         image: {{ .Values.images.dummy_server.name }}:{{ .Values.images.dummy_server.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
+        env:
+        - name: DUMMY_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "dummy-server-chart.fullname" . }}-secret
+              key: api-exposed
         ports:
           - name: http
             containerPort: {{ .Values.images.dummy_server.port }}
