# This is a combination of 4 commits. # This is the 1st commit message:
Add unencrypted secret as secret env.

# The commit message #2 will be skipped:

# Remove secret again...

# The commit message #3 will be skipped:

# Update gitattributes.

# The commit message #4 will be skipped:

# Possibly add locked secret now...

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 # encrypt files with git-crypt
-templates/dummy.secret.yml filter=git-crypt diff=git-crypt
+templates/dummy.secret.yaml filter=git-crypt diff=git-crypt
