--- a/templates/dummy.secret.yaml
+++ b/templates/dummy.secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: {{ template "dummy-server-chart.fullname" . }}-secret
   namespace: {{ .Values.namespace }}
 data:
-  # echo -n "Boo! I'm so secret :O" | base64
-  api-exposed: VGFkYWEhIEkgd2FzIGRlcGxveWVkIGluIGEgZ2l0LWNyeXB0IHNlY3JldC4=
+  # echo -n "Happy GPG-Secret" | base64
+  api-exposed: SGFwcHkgR1BHLVNlY3JldA==
